<resources>
    <string name="app_name">Poker Timer</string>
    <string name="timer_finished">TIME’S UP!</string>
    <string name="tournament_menu">Tournament Menu</string>
    <string name="edit_tournament">Edit Tournament</string>
    <string name="tournament_name">Tournament name</string>
    <string name="save_tournament">Save</string>
    <string name="load_tournament">Load</string>
    <string name="tournament_saved">Tournament saved</string>
    <string name="tournament_name_required">Enter a tournament name before saving</string>
    <string name="no_saved_tournaments">No saved tournaments</string>
    <string name="choose_tournament">Load Tournament</string>
    <string name="choose_tournament_first">Choose a tournament first</string>
    <string name="unsaved_tournament">Unsaved tournament</string>
    <string name="confirm_load_over_unsaved_tournament">Loading another tournament will discard your unsaved changes. Continue?</string>
    <string name="continue_loading">Continue</string>
    <string name="delete_tournament">Delete</string>
    <string name="confirm_delete_tournament">Delete “%1$s”? This cannot be undone.</string>
    <string name="tournament_deleted">Tournament deleted</string>
    <string name="reset_level">Reset Level</string>
    <string name="previous_level">Previous level</string>
    <string name="pause_timer">Pause timer</string>
    <string name="resume_timer">Resume timer</string>
    <string name="next_level">Next level</string>
    <string name="open_menu">Open menu</string>
    <string name="reset_tournament">Reset Tournament</string>
    <string name="level_number">Level %1$d</string>
    <string name="level_list_item">%1$d) %2$d / %3$d | %4$d min</string>
    <string name="break_list_item">BREAK | %1$d min</string>
    <string name="break_list_item_indefinite">BREAK | Indefinite</string>
    <string name="level_list_number">%1$d)</string>
    <string name="level_list_blinds">%1$d / %2$d</string>
    <string name="level_list_time">%1$d min</string>
    <string name="level_number_paused">Level %1$d - Paused</string>
    <string name="blinds_amount">%1$d / %2$d</string>
    <string name="blinds_amount_with_ante">%1$d / %2$d (%3$d)</string>
    <string name="optional_title">Title (optional)</string>
    <string name="small_blind">Small blind</string>
    <string name="big_blind">Big blind</string>
    <string name="double_big_blind">Big blind is double the small blind</string>
    <string name="time_minutes">Length (minutes)</string>
    <string name="indefinite_break">Indefinite break</string>
    <string name="indefinite">Indefinite</string>
    <string name="set_level_time">Set level time</string>
    <string name="has_ante">Use ante</string>
    <string name="ante_equals_big_blind">Ante is equal to the big blind</string>
    <string name="ante_amount">Ante</string>
    <string name="ante_display">(Ante %1$d)</string>
    <string name="add_level">+ Level</string>
    <string name="add_break">+ Break</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="settings">Settings</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="choose_alarm_sound_collapsed">Alarm: %1$s  ▼</string>
    <string name="choose_alarm_sound_expanded">Alarm: %1$s  ▲</string>
    <string name="no_alarm_sounds">No alarm sounds</string>
    <string name="tts_unavailable_message">No installed text-to-speech engine could play an announcement on this device.</string>
    <string name="sample_sound">Sample</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="text_to_speech_collapsed">Text to speech  ▼</string>
    <string name="text_to_speech_expanded">Text to speech  ▲</string>
    <string name="speech_start_label">Play tournament start</string>
    <string name="speech_start_text">Good luck everyone in today’s tournament</string>
    <string name="speech_new_level_label">Play new level</string>
    <string name="speech_new_level_text">Blinds are up next hand</string>
    <string name="speech_blinds_label">Play blinds intro</string>
    <string name="speech_blinds_text">Blinds will be</string>
    <string name="speech_ante_text">with an ante of</string>
    <string name="speech_blinds_prefix">blinds:</string>
    <string name="speech_ante_prefix">ante:</string>
    <string name="speech_break_label">Play break announcement</string>
    <string name="speech_break_text">We are now on a break</string>
    <string name="preview_speech">Preview</string>
    <string name="color_scheme">Color scheme</string>
    <string name="day_scheme">White</string>
    <string name="black_scheme">Slate</string>
    <string name="forest_green_scheme">Green</string>
    <string name="blue_scheme">Blue</string>
    <string name="violet_scheme">Violet</string>
    <string name="red_scheme">Red</string>
    <string name="choose_scheme_collapsed">Theme: %1$s  ▼</string>
    <string name="choose_scheme_expanded">Theme: %1$s  ▲</string>
    <string name="default_break_title">BREAK</string>
    <string name="remove_level">Remove Level</string>
    <string name="remove_break">Remove Break</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="previous_item">Previous\n%1$s</string>
    <string name="next_item">Next\n%1$s</string>
    <string name="preview_level">%1$s\n%2$d / %3$d</string>
    <string name="preview_level_with_ante">%1$s\n%2$d / %3$d (%4$d)</string>
    <string name="preview_break">%1$s</string>
    <string name="preview_break_with_blinds">%1$s\nNext blinds %2$d / %3$d</string>
    <string name="preview_break_with_blinds_and_ante">%1$s\nNext blinds %2$d / %3$d (%4$d)</string>
    <string name="preview_break_with_previous_blinds">%1$s\nPrevious blinds %2$d / %3$d</string>
    <string name="preview_break_with_previous_blinds_and_ante">%1$s\nPrevious blinds %2$d / %3$d (%4$d)</string>
</resources>
