<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_menu"
    android:layout_width="340dp"
    android:layout_height="match_parent"
    android:layout_gravity="end"
    android:background="?attr/menuBackground"
    android:fillViewport="true"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/settings"
            android:textColor="?attr/themeText"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/alarm_sound_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alarm_sound" />

        <LinearLayout
            android:id="@+id/alarm_sound_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:visibility="gone" />

        <Button
            android:id="@+id/text_to_speech_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/text_to_speech" />

        <LinearLayout
            android:id="@+id/text_to_speech_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/tts_start_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speech_start_label"
                        android:textColor="?attr/themeText"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/tts_start_preview"
                        style="@style/PokerTimerIconButton"
                        android:contentDescription="@string/preview_speech"
                        android:src="@drawable/ic_play" />
                </LinearLayout>

                <EditText
                    android:id="@+id/tts_start_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/speech_start_text"
                    android:textColor="?attr/themeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/tts_new_level_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speech_new_level_label"
                        android:textColor="?attr/themeText"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/tts_new_level_preview"
                        style="@style/PokerTimerIconButton"
                        android:contentDescription="@string/preview_speech"
                        android:src="@drawable/ic_play" />
                </LinearLayout>

                <EditText
                    android:id="@+id/tts_new_level_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/speech_new_level_text"
                    android:textColor="?attr/themeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/tts_blinds_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speech_blinds_label"
                        android:textColor="?attr/themeText"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/tts_blinds_preview"
                        style="@style/PokerTimerIconButton"
                        android:contentDescription="@string/preview_speech"
                        android:src="@drawable/ic_play" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/EditorLabel"
                        android:layout_width="56dp"
                        android:text="@string/speech_blinds_prefix" />

                    <EditText
                        android:id="@+id/tts_blinds_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/speech_blinds_text"
                        android:textColor="?attr/themeText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/EditorLabel"
                        android:layout_width="56dp"
                        android:text="@string/speech_ante_prefix" />

                    <EditText
                        android:id="@+id/tts_ante_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:singleLine="true"
                        android:text="@string/speech_ante_text"
                        android:textColor="?attr/themeText" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <CheckBox
                        android:id="@+id/tts_break_checkbox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speech_break_label"
                        android:textColor="?attr/themeText"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/tts_break_preview"
                        style="@style/PokerTimerIconButton"
                        android:contentDescription="@string/preview_speech"
                        android:src="@drawable/ic_play" />
                </LinearLayout>

                <EditText
                    android:id="@+id/tts_break_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/speech_break_text"
                    android:textColor="?attr/themeText" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/theme_selector_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/color_scheme" />

        <LinearLayout
            android:id="@+id/theme_options_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:orientation="vertical"
            android:visibility="gone" />

        <Button
            android:id="@+id/settings_back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/back_to_menu" />
    </LinearLayout>
</ScrollView>
